--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,6 +23,8 @@ website:
   google-analytics: "G-6903XX1GX6"
   page-navigation: true
   back-to-top-navigation: false
+  navbar:
+    background: "#398FCC"
   sidebar:
     style: docked
     background: light
