--- a/_quarto.yml
+++ b/_quarto.yml
@@ -104,7 +104,7 @@ format:
           <div class="callout callout-style-default callout-note callout-titled" style="font-style:italic">
             <div class="callout-header d-flex align-content-center">
               <div class="callout-icon-container"><i class="callout-icon"></i></div>
-              <div class="callout-title-container flex-fill">Menulinje tilgås oppe i venstre hjørne fra mobilen</div>
+              <div class="callout-title-container flex-fill">Menulinje tilgås oppe i venstre hjørne fra mobil/tablet</div>
             </div>
           </div>
         </div>
