--- a/_quarto.yml
+++ b/_quarto.yml
@@ -56,7 +56,7 @@ website:
           <a href=https://bordtennisdanmark.dk/kalender/dm-i-ping-pong target=_blank><img src=filer/generelt/btdk.png style=height:24px></a>
           &nbsp;<a href=https://www./dgi.dk/bordtennis target=_blank><img src=filer/generelt//dgi.png style=height:24px></a>
           &nbsp;<a href=http://hoerningbtk.dk target=_blank><img src=filer/event/ping-pong-dm-2023/arrangoer.png style=height:24px></a>
-          &nbsp;<a href=https://www.facebook.com/groups/505063570605808 target=_blank><img src=filer/generelt/icttf.png style=height:24px></a>
+          &nbsp;<a href=https://icttf.co target=_blank><img src=filer/generelt/icttf.png style=height:24px></a>
           &nbsp;<a href=https://www.sport-live.dk target=_blank><img src=filer/event/ping-pong-dm-2023/tv.png style=height:24px></a>
           &nbsp;<a href=https://rema1000.dk target=_blank><img src=filer/event/ping-pong-dm-2023/sponsor-1.png style=height:24px></a>
           &nbsp;<a href=https://www.gfforsikring.dk/gfaarhus target=_blank><img src=filer/event/ping-pong-dm-2023/sponsor-2.png style=height:24px></a>
